Do not enable stacking context with transform animation + some fill mode

In our previous CL:
https://chromium-review.googlesource.com/c/chromium/src/+/1066630
We make an element containing block and enable its stacking context when
this element has transform animation with forwards or both fill-mode.
This change is breaking the stacking context behavior where inbox
depends on.

This CL keeps the containing block behavior but reverts the stacking
context. Unit tests are updated.

Bug: 899759
Change-Id: I1f519c3383df9a89bcd0c2ec9f15e1c9b8ca1dc0
Reviewed-on: https://chromium-review.googlesource.com/c/1330282
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Anders Ruud <andruud@chromium.org>
Commit-Queue: Xida Chen <xidachen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607336}
Former-commit-id: 86dea917da54db1ecfd9acb4d13f79e5ec134ed6